<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewmodel"
            type="com.deushdezt.library.ui.library_vm.LibraryViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/default_gap"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/new_book_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:gravity="center"
            android:layout_marginBottom="@dimen/default_item_gap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/book_name_hint"
            android:layout_marginBottom="@dimen/default_item_gap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewmodel.nameInput}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/book_isbn_hint"
            android:layout_marginBottom="@dimen/default_item_gap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="numberSigned"
                android:text="@={viewmodel.isbnInput}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/book_author_hint"
            android:layout_marginBottom="@dimen/default_item_gap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewmodel.authorInput}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/book_editorial_hint"
            android:layout_marginBottom="@dimen/default_item_gap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewmodel.editorialInput}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/book_year_hint"
            android:layout_marginBottom="@dimen/default_item_gap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="date"
                android:text="@={viewmodel.yearInput}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_book_action"
            android:layout_gravity="end"
            android:text="@string/add_book_action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>